methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:8: error: ';' expected but ',' found.
while (!vuBiscuit()) {chercheur(),transition()}} 
                                 ^